# bitbank-api-rs

./: .gitignore  Cargo.toml  README.md
bitbank-api/: Cargo.toml
bitbank-api/src/: lib.rs  ticker.rs
bitbank-api/src/private/: assets.rs  auth.rs  cancel_order.rs  cancel_orders.rs  create_order.rs  deposit_history.rs  fetch_active_orders.rs  fetch_order.rs  fetch_orders.rs  mod.rs  trade_history.rs  withdrawal_history.rs
bitbank-api/src/public/: candlestick.rs  depth.rs  exchange_status.rs  mod.rs  pairs.rs  ticker.rs  tickers.rs  transactions.rs
bitbank-api/src/stream/: depth_diff.rs  depth_whole.rs  mod.rs  ticker.rs  transactions.rs
examples/: Cargo.toml  account_status.rs  public_api.rs  stream.rs  stream_api.rs  trade.rs
