[package]
name = "bitbank-api"
version = "0.2.1"
authors = ["Akira Hayakawa <ruby.wktk@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Rust library for bitbank API"
repository = "https://github.com/akiradeveloper/bitbank-api-rs"
readme = "../README.md"
categories = ["api-bindings"]
keywords = ["bitbank", "crypto", "trading"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
derive_builder = "0.12.0"
derive_more = "0.99"
futures-util = { version = "0.3", default-features = false }
hex = "0.4.3"
query_params = "0.1.0"
reqwest = { version = "0.11", features = ["json"] }
rust-crypto = "0.2.36"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "2", features = ["chrono"] }
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.18", features = ["rustls-tls-native-roots"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
