[package]
name = "examples"
version = "0.0.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
bitbank-api = { path = "../bitbank-api" }

anyhow = "1"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }

[[example]]
name = "stream"
path = "stream.rs"

[[example]]
name = "trade"
path = "trade.rs"

[[example]]
name = "account-status"
path = "account_status.rs"